--- a/assets/css/ui-plugins.css
+++ b/assets/css/ui-plugins.css
@@ -30,12 +30,14 @@ div:where(.swal2-container) button:where(.swal2-close):hover {}
 .modal__content {margin:0;line-height:inherit;color:inherit;padding:0;border-radius:0;flex:1 1 calc(100% - 56px);overflow-y:auto;}
 
 .modal__header {position:sticky;top:0;left:0;width:100%;padding:14.5px 16px;background-color:var(--white-100);}
-.modal__header__alert {padding:24px 24px 8px;min-height:40px;}
+.modal__header__alert {padding:24px 24px 8px;min-height:40px;gap:10px;}
 .modal__header .modal__title {flex:1 1 100%;display:flex;justify-content:center;}
-.modal__header .modal__close {position:absolute;right:0;top:0;width:27px;height:27px;padding:14.5px 16px;display:flex;align-items:center;justify-content:center;box-sizing:content-box;}
+.modal__header .modal__close {position:absolute;right:0;top:0;width:24px;height:24px;padding:14.5px 16px;display:flex;align-items:center;justify-content:center;box-sizing:content-box;}
 .modal__header .modal__close:before {content:'';flex:0 0 24px;width:24px;height:24px;background:url(../images/ico/ico_close.svg) center center / contain no-repeat;}
-.modal__header__alert .modal__close {padding:24px 24px 8px;}
+.modal__header__alert .title-large {justify-content:flex-start;}
+.modal__header__alert .modal__close {position:static;padding:0;}
 
+.modal__content__alert {padding:16px 0 0;}
 .modal__content__alert .body-large {padding:0 8px;}
 
 .modal__footer_alert .btn-wrap {padding-top:40px;}
