--- a/html/components/component_modal.html
+++ b/html/components/component_modal.html
@@ -69,12 +69,12 @@
 			<div class="guide-column-list">
 				<button class="btn-large btn-outlined" data-micromodal-trigger="modal-layout">modal-layout</button>
 				<button class="btn-large btn-outlined" data-micromodal-trigger="modal-select">modal-select</button>
-				<button class="btn-large btn-outlined" data-micromodal-trigger="modal-alert">modal-alert (prevent close)</button>
-				<button class="btn-large btn-outlined" data-micromodal-trigger="modal-alert1">modal-alert1</button>
-				<button class="btn-large btn-outlined" data-micromodal-trigger="modal-alert2">modal-alert2</button>
-				<button class="btn-large btn-outlined" data-micromodal-trigger="modal-alert3">modal-alert3</button>
-				<button class="btn-large btn-outlined" data-micromodal-trigger="modal-alert4">modal-alert4</button>
-				<button class="btn-large btn-outlined" data-micromodal-trigger="modal-alert5">modal-alert5</button>
+				<button class="btn-large btn-outlined" data-micromodal-trigger="modal-alert1">modal-alert1 (prevent close)</button>
+				<button class="btn-large btn-outlined" data-micromodal-trigger="modal-alert2">modal-alert2 (text only)</button>
+				<button class="btn-large btn-outlined" data-micromodal-trigger="modal-alert3">modal-alert3 (text title)</button>
+				<button class="btn-large btn-outlined" data-micromodal-trigger="modal-alert4">modal-alert4 (two buttons)</button>
+				<button class="btn-large btn-outlined" data-micromodal-trigger="modal-alert5">modal-alert5 (two buttons)</button>
+				<button class="btn-large btn-outlined" data-micromodal-trigger="modal-alert6">modal-alert6 (two buttons)</button>
 
 			</div>
 		</div>
@@ -111,16 +111,13 @@
 	</div>
 	<!-- //micromodal -->
 
-
-
-
 	<!-- micromodal -->
 	<div class="micromodal-slide micromodal-slide-bottom modal" id="modal-select">
 		<div class="modal__overlay" tabindex="-1" data-micromodal-close>
 			<div class="modal__container" role="dialog" aria-modal="true">
 
 				<div class="modal__header modal__header__alert">
-					<strong class="modal__title title-large j-start">필터</strong>
+					<strong class="modal__title title-large">필터</strong>
 					<button type="button" class="modal__close" aria-label="팝업 닫기" data-micromodal-close></button>
 				</div>
 				<div class="modal__content">
@@ -143,11 +140,38 @@
 	<!-- //micromodal -->
 
 	<!-- micromodal -->
-	<div class="micromodal-slide micromodal-slide-bottom modal" id="modal-alert">
+	<div class="micromodal-slide micromodal-slide-bottom modal" id="modal-alert1">
 		<div class="modal__overlay" tabindex="-1">
 			<div class="modal__container" role="dialog" aria-modal="true">
 
+				<div class="modal__header modal__header__alert"></div>
+				<div class="modal__content modal__content__alert">
+					<div class="content">
+						<p class="body-large">텍스트 텍스트 텍스트 텍스트 텍스트 텍스트 텍스트 텍스트 텍스트 텍스트 텍스트 텍스트 텍스트 텍스트 텍스트 텍스트 텍스트 텍스트</p>
+					</div>
+				</div>
+				<div class="modal__footer modal__footer_alert">
+					<!-- bottom-btn -->
+					<div class="bottom-btn">
+						<div class="btn-wrap">
+							<button type="button" class="btn-large btn-primary" data-micromodal-close>저장</button>
+						</div>
+					</div>
+					<!-- //bottom-btn -->
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- //micromodal -->
+
+	<!-- micromodal -->
+	<div class="micromodal-slide micromodal-slide-bottom modal" id="modal-alert2">
+		<div class="modal__overlay" tabindex="-1" data-micromodal-close>
+			<div class="modal__container" role="dialog" aria-modal="true">
+
 				<div class="modal__header modal__header__alert">
+					<strong class="modal__title title-large"></strong>
+					<button type="button" class="modal__close" aria-label="팝업 닫기" data-micromodal-close></button>
 				</div>
 				<div class="modal__content modal__content__alert">
 					<div class="content">
@@ -158,6 +182,122 @@
 					<!-- bottom-btn -->
 					<div class="bottom-btn">
 						<div class="btn-wrap">
+							<button type="button" class="btn-large btn-primary" data-micromodal-close>저장</button>
+						</div>
+					</div>
+					<!-- //bottom-btn -->
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- //micromodal -->
+
+	<!-- micromodal -->
+	<div class="micromodal-slide micromodal-slide-bottom modal" id="modal-alert3">
+		<div class="modal__overlay" tabindex="-1" data-micromodal-close>
+			<div class="modal__container" role="dialog" aria-modal="true">
+
+				<div class="modal__header modal__header__alert">
+					<strong class="modal__title title-large">타이틀명</strong>
+					<button type="button" class="modal__close" aria-label="팝업 닫기" data-micromodal-close></button>
+				</div>
+				<div class="modal__content modal__content__alert">
+					<div class="content">
+						<p class="body-large">텍스트 텍스트 텍스트 텍스트 텍스트 텍스트 텍스트 텍스트 텍스트 텍스트 텍스트 텍스트 텍스트 텍스트 텍스트 텍스트 텍스트 텍스트</p>
+					</div>
+				</div>
+				<div class="modal__footer modal__footer_alert">
+					<!-- bottom-btn -->
+					<div class="bottom-btn">
+						<div class="btn-wrap">
+							<button type="button" class="btn-large btn-primary" data-micromodal-close>저장</button>
+						</div>
+					</div>
+					<!-- //bottom-btn -->
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- //micromodal -->
+
+	<!-- micromodal -->
+	<div class="micromodal-slide micromodal-slide-bottom modal" id="modal-alert4">
+		<div class="modal__overlay" tabindex="-1" data-micromodal-close>
+			<div class="modal__container" role="dialog" aria-modal="true">
+
+				<div class="modal__header modal__header__alert">
+					<strong class="modal__title title-large">타이틀명</strong>
+					<button type="button" class="modal__close" aria-label="팝업 닫기" data-micromodal-close></button>
+				</div>
+				<div class="modal__content modal__content__alert">
+					<div class="content">
+						<p class="body-large">텍스트 텍스트 텍스트 텍스트 텍스트 텍스트 텍스트 텍스트 텍스트 텍스트 텍스트 텍스트 텍스트 텍스트 텍스트 텍스트 텍스트 텍스트</p>
+					</div>
+				</div>
+				<div class="modal__footer modal__footer_alert">
+					<!-- bottom-btn -->
+					<div class="bottom-btn">
+						<div class="btn-wrap">
+							<button type="button" class="btn-large btn-primary" data-micromodal-close>저장</button>
+							<button type="button" class="btn-large btn-primary" data-micromodal-close>저장</button>
+						</div>
+					</div>
+					<!-- //bottom-btn -->
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- //micromodal -->
+
+	<!-- micromodal -->
+	<div class="micromodal-slide micromodal-slide-bottom modal" id="modal-alert5">
+		<div class="modal__overlay" tabindex="-1" data-micromodal-close>
+			<div class="modal__container" role="dialog" aria-modal="true">
+
+				<div class="modal__header modal__header__alert">
+					<strong class="modal__title title-large">타이틀명</strong>
+					<button type="button" class="modal__close" aria-label="팝업 닫기" data-micromodal-close></button>
+				</div>
+				<div class="modal__content modal__content__alert">
+					<div class="content">
+						<p class="body-large">텍스트 텍스트 텍스트 텍스트 텍스트 텍스트 텍스트 텍스트 텍스트 텍스트 텍스트 텍스트 텍스트 텍스트 텍스트 텍스트 텍스트 텍스트</p>
+					</div>
+				</div>
+				<div class="modal__footer modal__footer_alert">
+					<!-- bottom-btn -->
+					<div class="bottom-btn">
+						<div class="btn-wrap">
+							<button type="button" class="btn-large btn-secondary" data-micromodal-close>저장</button>
+							<button type="button" class="btn-large btn-primary" data-micromodal-close>저장</button>
+						</div>
+					</div>
+					<!-- //bottom-btn -->
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- //micromodal -->
+
+
+	<!-- micromodal -->
+	<div class="micromodal-slide micromodal-slide-bottom modal" id="modal-alert6">
+		<div class="modal__overlay" tabindex="-1" data-micromodal-close>
+			<div class="modal__container" role="dialog" aria-modal="true">
+
+				<div class="modal__header modal__header__alert">
+					<strong class="modal__title title-large">타이틀명</strong>
+					<button type="button" class="modal__close" aria-label="팝업 닫기" data-micromodal-close></button>
+				</div>
+				<div class="modal__content modal__content__alert">
+					<div class="content">
+						<p class="body-large">텍스트 텍스트 텍스트 텍스트 텍스트 텍스트 텍스트 텍스트 텍스트 텍스트 텍스트 텍스트 텍스트 텍스트 텍스트 텍스트 텍스트 텍스트</p>
+					</div>
+				</div>
+				<div class="modal__footer modal__footer_alert">
+					<!-- bottom-btn -->
+					<div class="bottom-btn">
+						<div class="btn-wrap">
+							<button type="button" class="btn-large btn-secondary" data-micromodal-close>저장 저장 저장</button>
 							<button type="button" class="btn-large btn-primary" data-micromodal-close>저장</button>
 						</div>
 					</div>
