--- a/html/components/component_alert.html
+++ b/html/components/component_alert.html
@@ -130,7 +130,7 @@
 				showCancelButton: false,
 				showCloseButton: false,
 				reverseButtons: true,
-				title: '<span class="description info fs-18 fc-typography-title">타이틀명타이틀명타이틀명타이틀명타이틀명타이틀명타이틀명타이틀명타이틀명타이틀명타이틀명타이틀명타이틀명타이틀명타이틀명타이틀명</span>',
+				title: '<span class="description body-xlarge fw-500">삭제하시겠습니까?</span>',
 				confirmButtonText: '예',
 				cancelButtonText: '아니요',
 				customClass: {
