--- a/html/components/component_button_icon.html
+++ b/html/components/component_button_icon.html
@@ -77,7 +77,7 @@
 				<button type="button" class="btn-large btn-primary"><i class="ico-share"></i><span>공유</span></button>
 				<button type="button" class="btn-large btn-primary"><i class="ico-check"></i><span>Check</span></button>
 				<button type="button" class="btn-large btn-primary"><i class="ico-add"></i><span>명함 등록</span></button>
-                
+
 			</div>
 			<hr>
 			<h2>Button <span>Medium</span></h2>
@@ -92,7 +92,12 @@
 			<hr>
 			<h2>Button <span>Noborder</span></h2>
 			<div class="guide-column-list">
-				<button type="button" class="btn-noborder"><i class="ico-sort"></i>순서 설정</button>
+				<button type="button" class="btn-noborder"><i class="ico-order"></i>순서 설정</button>
+			</div>
+			<h2>Button <span>Border</span></h2>
+			<div class="guide-column-list">
+				<button type="button" class="btn-border" aria-label="정렬"><i class="ico-sorting"></i></button>
+				<button type="button" class="btn-border is-active" aria-label="정렬"><i class="ico-sorting"></i></button>
 			</div>
 		</div>
 
