--- a/html/components/component_card.html
+++ b/html/components/component_card.html
@@ -67,7 +67,9 @@
 		<p>Radio</p>
 
 		<div class="ui-guide-section">
+
 			<div class="ui-guide-box">
+				<!-- card-select -->
 				<div class="card-select">
 					<div class="inp inp-large">
 						<span class="tags tags-medium tags-black-80">A타입</span>
@@ -80,7 +82,99 @@
 						</label>
 					</div>
 				</div>
+				<!-- //card-select -->
+
 			</div>
+
+			<hr>
+
+			<div class="ui-guide-box">
+
+
+				<!-- business-card-customer -->
+				<div class="business-card-customer-list">
+					<div class="business-card-customer">
+						<a href="#">
+							<strong class="title-medium">김성민</strong>
+							<div class="company">
+								<span>디지털공통개발부 UI/UX팀</span>
+								<div class="division mx8"></div>
+								<span>과장</span>
+							</div>
+							<div class="body-medium fw-400">파인너츠</div>
+							<div class="tags tags-small tags-lightBlue">키맨</div>
+						</a>
+						<figure>
+							<div class="due-date">
+								<strong class="body-small">만료일</strong>
+								<span>2024.11.26</span>
+							</div>
+							<div class="thumb thumb-nodata">
+								<!-- <button type="button" class="btn-small btn-black btn-round">연장하기</button> -->
+								<picture>
+									<source srcset="">
+									<img src="" alt="">
+								</picture>
+							</div>
+						</figure>
+					</div>
+
+					<div class="business-card-customer">
+						<a href="#">
+							<strong class="title-medium">이름</strong>
+							<div class="company">
+								<span>부서명</span>
+								<div class="division mx8"></div>
+								<span>직책</span>
+							</div>
+							<div class="body-medium fw-400">회사명</div>
+
+						</a>
+						<figure>
+							<div class="due-date">
+								<strong class="body-small">만료일</strong>
+								<div class="tags tags-small tags-lightBlue">D-30</div>
+							</div>
+							<div class="thumb">
+								<button type="button" class="btn-small btn-black btn-round" onclick="toastr.success(``, '연장되었습니다.');">연장하기</button>
+								<picture>
+									<source srcset="../../assets/@temp/thumb_w.png">
+									<img src="../../assets/@temp/thumb_w.png" alt="">
+								</picture>
+							</div>
+						</figure>
+					</div>
+
+					<div class="business-card-customer">
+						<a href="#">
+							<strong class="title-medium">이름</strong>
+							<div class="company">
+								<span>부서명</span>
+								<div class="division mx8"></div>
+								<span>직책</span>
+							</div>
+							<div class="body-medium fw-400">회사명</div>
+
+						</a>
+						<figure>
+							<div class="due-date">
+								<div class="tags tags-small tags-lightRed">삭제예정</div>
+							</div>
+							<div class="thumb">
+								<button type="button" class="btn-small btn-black btn-round" onclick="toastr.success(``, '연장되었습니다.');">연장하기</button>
+								<picture>
+									<source srcset="../../assets/@temp/thumb_w.png">
+									<img src="../../assets/@temp/thumb_w.png" alt="">
+								</picture>
+							</div>
+						</figure>
+					</div>
+				</div>
+				<!-- //business-card-customer -->
+
+			</div>
+			<hr>
+
 		</div>
 	</div>
 </body>
