--- a/assets/css/ui-content.css
+++ b/assets/css/ui-content.css
@@ -13,9 +13,9 @@
 .group-title .apos {color:var(--status-error);margin-left:2px;}
 
 /* business-card */
-.init-business-card {border-radius:8px;border:1.5px dashed var(--deepblue-300);background:var(--background-bg_white);box-shadow:0px 0.5px 0px 0px var(--shadow-gray_1), 0px 2px 4px -1px var(--shadow-gray_1);padding:24px;}
-.init-business-card picture {margin-top:20px;align-items:center;justify-content:center;}
-.init-business-card p {text-align:center;}
+.init-regist {border-radius:8px;border:1.5px dashed var(--deepblue-300);background:var(--background-bg_white);box-shadow:0px 0.5px 0px 0px var(--shadow-gray_1), 0px 2px 4px -1px var(--shadow-gray_1);padding:24px;}
+.init-regist picture {margin-top:20px;align-items:center;justify-content:center;}
+.init-regist p {}
 
 /* businesscard-list */
 .businesscard-list {}
@@ -40,8 +40,6 @@
 
 /* business-swiper */
 .swiper-business-card {padding:0 16px;}
-
-
 .card-select {}
 .card-select .inp.inp-large {padding-left:0;}
 .card-select .tags {position:absolute;left:12px;top:10px;z-index:var(--tab-zIndex);}
@@ -50,3 +48,34 @@
 .card-select input[type="radio"]:checked ~ label picture img {border-color:var(--status-active);}
 
 
+/* sort-wrap */
+.sort-wrap {padding:8px 0;}
+.sort-wrap .sort-list:not(:first-child) {margin-top:12px;}
+.sort-wrap .sort-list {display:flex;align-items:center;justify-content:flex-end;}
+.sort-wrap .sort-list .filter {display:flex;align-items:center;gap:2px;}
+.sort-wrap .sort-list .filter span {font-size:14px;font-weight:500;color:var(var(--typography-gray));}
+.sort-wrap .sort-list .sort {display:flex;align-items:center;gap:16px;}
+.sort-wrap .sort-list .sort span {font-size:14px;font-weight:500;color:var(var(--typography-gray));}
+
+/* business-card-customer */
+.business-card-customer-list {padding:0 8px;}
+.business-card-customer {display:flex;justify-content:space-between;gap:16px;padding:16px 0;}
+.business-card-customer:not(:last-child) {border-bottom:1px solid var(--border-4);}
+
+.business-card-customer a {flex:1 1 100%;}
+.business-card-customer a .title-medium {padding:0 4px;}
+.business-card-customer a > *:not(:last-child) {margin-bottom:8px;}
+.business-card-customer a .company {display:flex;align-items:center;padding:0 4px;flex-wrap:wrap;}
+.business-card-customer a .company span {font-size:14px;color:var(--typography-caption);line-height:1;}
+.business-card-customer a .body-medium {padding:0 4px;}
+.business-card-customer a .tags {}
+.business-card-customer figure {text-align:right;}
+.business-card-customer figure .due-date {margin-bottom:6px;display:flex;align-items:center;justify-content:flex-end;}
+.business-card-customer figure .due-date .body-small {font-weight:500;padding-right:4px;}
+.business-card-customer figure .due-date span {}
+.business-card-customer figure .thumb {position:relative;}
+.business-card-customer figure .thumb button {position:absolute;left:50%;top:50%;transform:translate(-50%,-50%);z-index:1;}
+.business-card-customer figure .thumb picture {width:120px;height:74px;opacity:0.8;}
+.business-card-customer figure .thumb picture img {width:100%;height:100%;border-radius:8px;}
+.business-card-customer figure .thumb.thumb-nodata picture {border-radius:8px;border:1px solid var(--border-8);background:url(../images/PBWBU/ico_business_card_empty.svg) center center / 28px 28px no-repeat var(--background-bg_lightGray);}
+.business-card-customer figure .thumb.thumb-nodata picture img {display:none;}
