--- a/assets/css/ui-layout.css
+++ b/assets/css/ui-layout.css
@@ -38,9 +38,10 @@ main {position:relative;min-height:100vh;}
 main {display:flex;flex-direction:column;}
 main .main-inner {flex:1 1 calc(100% - 52px);display:flex;}
 #container {flex:1 1 100%;}
-.container-center {display:flex;flex-direction:column;justify-content:center;}
-.content {padding:0 16px;}
-/* .modal__content .content {padding:0 24px;} */
+.content {padding:0 16px;height:100%;flex:1 1 100%;display:flex;flex-direction:column;}
+
+.division-center {flex:1 1 100%;display:flex;justify-content:center;flex-direction:column;}
+
 .modal__content .content.content-fluid > * {margin:0 -16px;}
 
 /* bottom-btn */
@@ -54,8 +55,8 @@ main .main-inner {flex:1 1 calc(100% - 52px);display:flex;}
 .btn-wrap .btn-secondary {flex:0 1 100px;}
 
 /* select-option */
-.select-option {padding-bottom:16px;}
-.select-option ul {}
+.select-option {}
+.select-option ul {margin-bottom:16px;}
 .select-option ul li {}
 .select-option ul li button {position:relative;display:block;width:100%;padding:0 24px;height:60px;}
 .select-option ul li button span {display:inline;font-size:16px;font-weight:500;color:var(--typography-title);vertical-align:middle;line-height:25px;}
@@ -64,4 +65,8 @@ main .main-inner {flex:1 1 calc(100% - 52px);display:flex;}
 .select-option ul li.select-active button {background-color:var(--background-bg_gray);padding-right:52px;}
 .select-option ul li.select-active button:after {content:'';position:absolute;right:24px;top:50%;margin-top:-14px;display:block;width:28px;height:28px;background:url(../images/ico/ico_select_option.svg) center center / contain no-repeat;}
 
+.select-option .title-large {padding:16px 24px;}
+.select-option .stroke4 {margin:16px 0;}
 
+/* no-result */
+.no-result {display:flex;align-items:center;justify-content:center;flex-direction:column;gap:4px;}
