--- a/html/components/component_group.html
+++ b/html/components/component_group.html
@@ -77,7 +77,7 @@
 				<!-- group -->
 				<div class="group py0">
 					<div class="right">
-						<button type="button" class="btn-noborder" data-micromodal-trigger="modal-businesscard"><i class="ico-sort"></i>순서 설정</button>
+						<button type="button" class="btn-noborder" data-micromodal-trigger="modal-businesscard"><i class="ico-order"></i>순서 설정</button>
 					</div>
 				</div>
 				<!-- //group -->
